; ModuleID = '/home/carl/AnghaBench/sway/sway/desktop/extr_xwayland.c_destroy.c'
source_filename = "/home/carl/AnghaBench/sway/sway/desktop/extr_xwayland.c_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sway_view = type { i32 }
%struct.sway_xwayland_view = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sway_view*)* @destroy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @destroy(%struct.sway_view* %0) #0 {
  %2 = alloca %struct.sway_view*, align 8
  %3 = alloca %struct.sway_xwayland_view*, align 8
  store %struct.sway_view* %0, %struct.sway_view** %2, align 8
  %4 = load %struct.sway_view*, %struct.sway_view** %2, align 8
  %5 = call %struct.sway_xwayland_view* @xwayland_view_from_view(%struct.sway_view* %4)
  store %struct.sway_xwayland_view* %5, %struct.sway_xwayland_view** %3, align 8
  %6 = load %struct.sway_xwayland_view*, %struct.sway_xwayland_view** %3, align 8
  %7 = icmp eq %struct.sway_xwayland_view* %6, null
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  br label %12

9:                                                ; preds = %1
  %10 = load %struct.sway_xwayland_view*, %struct.sway_xwayland_view** %3, align 8
  %11 = call i32 @free(%struct.sway_xwayland_view* %10)
  br label %12

12:                                               ; preds = %9, %8
  ret void
}

declare dso_local %struct.sway_xwayland_view* @xwayland_view_from_view(%struct.sway_view*) #1

declare dso_local i32 @free(%struct.sway_xwayland_view*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
